# ParaCode

./: .breakpoints  .gitignore  .replit  1.para  2.para  2.replit  3.para  CHANGELOG.md  CMakeLists.txt  Cargo.toml  DiscordBot.para  LICENSE  ParaCode.py  ParaCodeInstaller.iss  README.html  README.md  TEST.txt  a.para  a.py  ast_printer.py  basic.py  config.py  config.toml  dataCounter.py  error.py  grammar.txt  index.para  installDependencies.py  lexer.py  main.cpp  main.go  main.para  main.py  main.sh  mandle.para  markdowntohtml.py  modules.toml  pyproject.toml  runRepl.py  settings.toml  (+8 more)
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
Examples/: Comments.para  Files.para  Functions.para  Input.para  Printing.para  TimeDate.para  Translator.para  Variables.para
ParaCode/: ParaCode.py  README.md  RunShell.py  __init__.py  basic.py  config.py  main.py  mandlebrot.flick  shell.py  shell.sh  shellTemplate.py
ParaCode/doc/: 15_strings.md  25_embedding.md  35_macros.md  50_iterators.md
ParaCode/examples/: numbers.para  operator_overloading.para  patching.para  string.para  ttt.flick
ParaCode/interpreter/: interpreter.py
ParaCode/repl/: repl.py
ParaCode/std/: __core__.para  __repl__.para  def.flick  def.para  io.flick
ParaCode/std/types/: bool.flick  float.para  int.flick  macro.para  num.para  range.para  str.flick
Unused/: ParaCodeToPython.para
WIP/discord/: main.para
WIP/discord/core/: Sockets.para
discord/: Client.para
dist2/Examples/: AccountStorage.para  HelloWorld.para
doc/: 00_vars.md  10_functions.md  16_operators.md  20_types.md  25_embedding.md  26_extensions.md  30_proto.md  35_macros.md  40_arrays.md  41_dictionaries.md  50_iterators.md  55_random.md  60_modules.md  61_packages.md  62_fileessentials.md  70_console.md  80_files.md  81_json.md  85_enums.md
examples/: c_methods.cpp  embed.cpp  embed.py  enums.para  events.para  exceptions.para  mandle.para  numbers.para  operator_overloading.flick  operator_overloading.para  patching.flick  patching.para  pythagorean.para  python_methods.py  reflection.para  rule110.para  string.para  ttt.para
examples/embed/: Cargo.toml  lib.rs
examples/embed/src/: main.rs
interpreter/: basic_object.py  basic_value.py  interpreter.py  scope.py  variable.py
interpreter/env/: builtins.py  globals.py
interpreter/env/builtin/: arith.py  time.py
lib/paracode/: Cargo.toml
oldsrc/: interpreter.rs  main.rs  paracode.rs
oldsrc/interpreter/: basic_object.rs  basic_value.rs  scope.rs  stack.rs  typing.rs  variable.rs
oldsrc/interpreter/typing/: basic_type.rs
oldsrc/repl/: repl.rs
paracode/: Cargo.toml
paracode-macros/: Cargo.toml
paracode-macros/src/: lib.rs
paracode-repl/: Cargo.toml
paracode-repl/src/: main.rs  repl.rs
paracode/src/: error.rs  interpreter.rs  lexer.rs  lib.rs  paracode.rs  parse.rs  utils.rs
paracode/src/extensions/: extension.rs
paracode/src/interpreter/: basic_object.rs  basic_typing.rs  basic_value.rs  basic_wrapper.rs  scope.rs  stack.rs  std.rs  typing.rs
paracode/src/interpreter/std/: float32.rs
paracode/src/interpreter/typing/: basic_type.rs
paracode/src/parse/: node.rs  parser.rs  source_location.rs
parse/: node.py  parser.py
parser/: parser.py
repl/: repl.py
scripts/: build.sh  clean.sh  dataCounter.py  dataCounter.sh  main.sh  publish.sh  test.sh  update.sh
src/: ParaCode.cpp  ParaCode.h  ast_printer.h  error.h  lexer.cpp  lexer.h  main.cpp  pch.h  util.cpp  util.h
src/interpreter/: basic_object.cpp  basic_object.h  basic_value.cpp  basic_value.h  function.h  interpreter.h  scope.h  stack.h  variable.cpp  variable.h
src/interpreter/env/: builtins.h  globals.h
src/interpreter/env/builtin/: arith.h  time.h
src/interpreter/typing/: basic_type.cpp  basic_type.h  union_type.h
src/parse/: node.cpp  node.h  parser.cpp  parser.h  source_location.h
src/repl/: repl.h
std/: __core__.flick  __core__.para  __repl__.flick  __repl__.para  base64.para  def.para  exp.para  io.para  math.para  numpara.para  os.para  regex.para  requests.para  scipara.para  time.para
std/cryptography/: fernet.para
std/experimental/: assert.para  match.para  testing.para
std/experimental/testing/: assert.para  test.para  testing.para
std/io/: console.para  file.para  json.para
std/math/: random.para
std/testing/: testing.para
std/tkinter/: tkinter.para
std/types/: array.para  bool.para  caseinsensitivedict.para  dict.para  dictionary.para  enum.para  float.para  func.para  int.para  iterable.para  macro.para  null.para  num.flick  num.para  object.para  range.para  str.para  timedelta.para  tk.para
std/types/events/: event.para  eventhandler.para  exceptionevent.para
std/types/exceptions/: argumenterror.para  arraylookuperror.para  dictlookuperror.para  doesnotexisterror.para  exception.para  indexerror.para  interruptederror.para  lookuperror.para  macroexpansionerror.para  multipledefinitionerror.para  notimplementederror.para  typeerror.para
std/types/math/: intvector2.para  intvector3.para  intvector4.para  matrix3.para  matrix4.para  vector2.para  vector3.para  vector4.para  vectors.para
std/types/math/matrix/: matrix.para  matrix3.para  matrix4.para
std/types/math/vectors/: intvector2.para  intvector3.para  intvector4.para  vector2.para  vector3.para  vector4.para  vectors.para
std/types/tcl/: tcl.para
std/types/tk/: tk.para
std/util/: langinfo.para  reflection.para  singleton.para
websockets/: websockets.para
