[tool.poetry]
name = "repl_python3_ParaCode"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.3"
pygame = "^1.9.6"
toml = "^0.10.1"
wget = "^3.2"
bs4 = "^0.0.1"
replit = "^2.0.0"
cryptography = "^3.1.1"
keyboard = "^0.13.5"
pynput = "^1.7.1"
googletrans = "^3.0.0"
gtts = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.10"]
build-backend = "poetry.masonry.api"
