[tool.poetry]
name = "ParaCode"
version = "1.2.20.4"
description = "The ParaCode Programming Language"
authors = ["DaRubyMiner360"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ParaCodeLang/ParaCode"
repository = "https://github.com/ParaCodeLang/ParaCode"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE",
]

[tool.poetry.scripts]
ParaCode = 'ParaCode:main'

[tool.poetry.dependencies]
python = "^3.8"
twine = "^3.2.0"
wheel = "^0.35.1"
markdown = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.10"]
build-backend = "poetry.masonry.api"