[package]
name = "paracode"
version = "3.0.0"
authors = ["DaRubyMiner360"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# downcast-rs = "1.2.0"
# better_any = "*"

[dependencies.uuid]
version = "*"
features = [
   "v4",                # Lets you generate random UUIDs
   "fast-rng",          # Use a faster (but still sufficiently random) RNG
   "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
   "js",
]
