[package]
name = "paracode"
version = "3.0.0"
authors = ["DaRubyMiner360"]
edition = "2021"

[dependencies]
strum = "0.24.1"
strum_macros = "0.24.1"
downcast-rs = "1.2.0"
lazy_static = "1.4.0"
dyn-clone = "1.0.11"
lexical = "6.1.1"

[dependencies.uuid]
version = "1.2.2"
features = [
   "v4",                # Lets you generate random UUIDs
   "fast-rng",          # Use a faster (but still sufficiently random) RNG
   "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
   "js",
]

[dev-dependencies]
pretty_assertions = "1.3.0"
